@@ -11,6 +11,7 @@ Verion 1.5.3
 * functions added that mask bad values in channel-dependent manner from decoded VDIF streams if EDV4 is used.  Per-channel accounting of zero values is provided.
 * Fix some data rate and frame rate calculations in mark5bfile.h
 * New function: void snprintmark5bfilesummary(char *str, int maxLength, const struct mark5b_file_summary *sum)
+* Change RPM name to vlbi-mark5access.*.rpm
 
 Version 1.5.2
 * Post DiFX-2.4
